# ibmf-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base64-to-file.h  clang.sh  file-stream-reader.cpp  file-stream-reader.h  gcc.sh  iso-file-reader.cpp  iso-file-reader.h  main.cpp
include/ibmf/: box.h  parser.h  stream-reader.h
src/: parser.cpp
